[package]
name = "ukiyoe"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
stretch = "0.3.2"
gl = "0.14"
sdl2 = "0.33"
sdl2-sys = "0.33"
pathfinder_canvas = "0"
pathfinder_color = "0"
pathfinder_content = "0"
pathfinder_geometry = "0"
pathfinder_gl = "0"
pathfinder_gpu = "0"
pathfinder_renderer = "0"
pathfinder_resources = "0"
lazy_static = "1"