[package]
name = "ukiyoe"
version = "0.0.0"
authors = ["Richard Anaya","Darryl Agostinelli"]
edition = "2018"
description = "A renderer agnostic GUI library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/ukiyoe"
readme="README.md"


[dependencies]
stretch = "0.3.2"
shoji = "0.0.3"
