[package]
name = "ukiyoe_curses"
version = "0.1.0"
authors = ["Darryl T. Agostinelli <dagostinelli@gmail.com>", "Richard <Richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ukiyoe = {path="../ukiyoe"}
pancurses = "0.16"
log = "0.4"
simplelog = "^0.7.6"
