[package]
name = "glfw_opengl4"
version = "0.1.0"
authors = ["Darryl T. Agostinelli <dagostinelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.37.0"
gl = "0.10.0"
gl_loader = "0.1.2"
nalgebra = "0.21.0"
